# InterfaceFramework

./: CMakeLists.txt
framework/: CMakeLists.txt  Engine.hpp  ObjectPool.hpp  TypeMask.hpp  Utility.hpp
game/: CMakeLists.txt  Controller.cpp  GlLoader.hpp  JsonReflector.hpp  Main.cpp  Name.cpp  Name.hpp  Renderer.cpp  Renderer.hpp  Serializer.hpp  SystemInterface.hpp  TestFunctions.cpp  TestFunctions.hpp  Transform.cpp  Transform.hpp  Window.cpp  Window.hpp
test/: CMakeLists.txt  Interface.hpp  Main.cpp
